kubernetes/ingress/portainer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portainer
spec:
  tls:
    - hosts:
        - portainer.doitsu.tech
      secretName: secret-tls 
  rules:
  - host: portainer.doitsu.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
